# data-pipeline-simulator

./: README.md  pyproject.toml
pipesim/: cli.py
pipesim/engine/: event.py  metrics.py  pipeline.py  queue.py  replay.py  stage.py
pipesim/stages/: ingest.py  sink.py  transform.py  validate.py
